Fix icon vertical display to horizontal on mobile

--- a/styles.css
+++ b/styles.css
@@ -43,9 +43,9 @@ a:not([class]):hover {
 
 /* banner */
 .quarto-title-banner {
-  padding: 3em 0; 
+  padding: 3em 0;
   background-image:
-    linear-gradient(rgba(0, 0, 0, 0.15), rgba(0, 0, 0, 0.15)), 
+    linear-gradient(rgba(0, 0, 0, 0.15), rgba(0, 0, 0, 0.15)),
     url('img/wide.jpg');
   background-position: center;
   background-size: cover;
@@ -55,18 +55,25 @@ a:not([class]):hover {
   font-size: 54px;
   margin-bottom: 10px;
 }
+
 .banner-text {
   font-size: 27px;
   margin-bottom: 20px;
 }
+
 .banner {
   font-family: 'Montserrat', sans-serif;
-  text-shadow: 1px 1px 4px rgba(0,0,0,0.5);
+  text-shadow: 1px 1px 4px rgba(0, 0, 0, 0.5);
   font-weight: 400;
   color: #fff;
 }
 
 /* icons */
+
+div.quarto-about-trestles .about-entity .about-links {
+  /* Fix icon vertical display to horizontal on mobile */
+  display: flow-root;
+}
 
 div.quarto-about-trestles .about-entity .about-link {
   border: none;
